# pow

./: .editorconfig  .env-example  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  .swcrc  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  contentConverter.js  deploy.yml  deployGlobalCommand.js  deployGuildCommand.js  eslint.config.js  eslint.config.mjs  index.js  migrate.Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  tsconfig-base.json  tsconfig-build.json  tsconfig-js.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  utils.js  vc-help.txt  voiceRead.js
.devcontainer/: devcontainer.json
.githooks/: post-index-change  pre-commit
.github/: CODEOWNERS  conventional-commit-lint.yaml  renovate.json
.github/ISSUE_TEMPLATE/: 0_bug_report.yml  1_improvement_suggestions.yml  2_feature_request.yml
.github/workflows/: cleanup-caches.yml  codeql.yml  dependency-review.yml  docker.yml  lint-pr.yml  maintain-quality.yml  release-please.yml  scorecards.yml  semver-label-check.yml  semver-label.yml  trigger_renovate.yml  (+1 more)
.husky/: post-index-change  pre-commit
commands/: join.js  leave.js  purge.js  random.js  read.js  readtoggle.js  view.js  voice.js
patches/: discord.js@14.11.0.patch
prisma/: schema.prisma
src/: commands.rs  connectionCtx.ts  contentConverter.js  contentConverter.ts  db.ts  deployGlobalCommand.js  deployGuildCommand.js  env.d.ts  guildCtx.ts  id.ts  index.js  index.ts  joinMessage.ts  load.ts  main.rs  utils.js  utils.ts  voiceRead.js  voiceRead.ts  worker.ts
(+53 files in other folders)
