[package]
name = "pow"
version = "4.0.0"
edition = "2021"

[dependencies]
dotenvy = "=0.15.7"
env_logger = "=0.11.5"
poise = "=0.6.1"
tokio = { version = "=1.41.1", features = ["macros", "rt-multi-thread"] }

[dependencies.songbird]
version = "=0.4.4"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "=0.5.4"
features = ["mp3"]

[lints.clippy]
pedantic = "warn"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
